# Graphtane

./: .gitignore  CMakeLists.txt  License.txt  README.md  index.html  params.json
CMake/: AddOpenVdbDefinitions.cmake  FindGAppFramework.cmake  FindGCommon.cmake  FindGCompute.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindGVis.cmake  FindGraphtane.cmake  FindILMBaseHalf.cmake  FindOPENCL.cmake  FindOpenVdb.cmake  FindTbb.cmake  ILMBaseHalf.cmake
Kernels/Fluid/: Advection.h  AdvectionFloat3.cl  AdvectionFluidState.cl  Bilinear.h  FluidDataTypes.h  FluidDynamics.cl  IsosurfaceNormals.cl  Neighbors3d.h  Params.h  Trilinear.h
Shaders/: DuplicateMirrored.geom
Shaders/Common/: Lambert.h  PassThrough.vert  ScreenQuad.vert  ShadowCaster.frag  Shadows.h  SimpleColor.frag  SimpleColorDiffuse.frag  SimpleColorDiffuseShadowed.frag  SimpleTextured.frag  SimpleTextured.vert  SimpleTexturedShadowed.frag  SimpleTexturedShadowed.vert  TexturePcf.h
Shaders/TessDisplacement/: TessDisplacement.tctrl  TessDisplacement.teval  TessDisplacement.vert
Shaders/Volume/: DeepShadowMaps.h  EmptyRayContext.h  HardSurfaceDeepShadowCaster.frag  HardSurfaceDeepShadowCaster.vert  RaymarchThroughBox.h  RaymarchedVolume.frag  RaymarchedVolume.vert  VdbRaymarchedVolume.frag  VdbRaymarchedVolume.vert  VolumeShadowCaster.frag  VolumeTextureSlice.frag  VolumeUtil.h  VolumetricSmoke.frag
Textures/: TemperatureRamp.dds
src/GAppFramework/: Application.cpp  Application.h  CMakeLists.txt  CameraController.cpp  CameraController.h  GAppFrameworkFwd.h  RenderQueueIds.h  RenderableFactory.cpp  RenderableFactory.h
src/GCommon/: CMakeLists.txt  FileFinder.cpp  FileFinder.h  GCommonFwd.h  Listenable.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  RollingMean.cpp  RollingMean.h  VectorHelper.h
src/GCompute/: CMakeLists.txt  ClError.cpp  ClError.h  ClIncludes.h  ClSystem.cpp  ClSystem.h  Context.cpp  Context.h  Context_cpu.h  Context_gpu_win32.h  GComputeFwd.h  GlTexture.h
src/GComputeVis/: CMakeLists.txt  Convert.cpp  Convert.h
src/GFluid/: Advecter.cpp  Advecter.h  BufferProvider.h  CMakeLists.txt  DivergenceFreeProjector.cpp  DivergenceFreeProjector.h  FluidSolver.cpp  FluidSolver.h  GFluidFwd.h  IsosurfaceNormalCalculator.cpp  IsosurfaceNormalCalculator.h  KernelRunner.cpp  KernelRunner.h  TempBufferPool.cpp  TempBufferPool.h
src/GSparseVolumes/: BoxBatchBuilder.cpp  BoxBatchBuilder.h  CMakeLists.txt  GSparseVolumesFwd.h  Grid.h  GridVectorIterators.cpp  GridVectorIterators.h  ImageBuffer.h  InternalNode.h  Leaf.h  RenderableVolumeFactory.cpp  RenderableVolumeFactory.h  VolumeTextureAtlasBuilder.cpp  VolumeTextureAtlasBuilder.h
src/GSparseVolumesVdb/: CMakeLists.txt  GridNormalCalculator.cpp  GridNormalCalculator.h  VdbGrid.h  VdbInternalNode.h  VdbLeaf.cpp  VdbLeaf.h  VdbTypes.h  VdbUtil.cpp  VdbUtil.h
src/GVis/: BufferUsage.h  CMakeLists.txt  Camera.cpp  Camera.h  Convert.cpp  Convert.h  DynamicTexture.cpp  DynamicTexture.h  GVisFwd.h  Geo.cpp  Geo.h  Light.cpp  Light.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Projection.cpp  Projection.h  RenderContext.h  RenderQueue.cpp  RenderQueue.h  RenderTarget.cpp  RenderTarget.h  RenderTextureTarget.cpp  RenderTextureTarget.h  Renderable.cpp  Renderable.h  RenderableNode.cpp  RenderableNode.h  SceneNode.cpp  SceneNode.h  ShaderParameter.cpp  ShaderParameter.h  ShaderProgram.cpp  ShaderProgram.h  ShadowProjector.cpp  ShadowProjector.h  (+14 more)
src/GVis/Io/: ColorSpace.h  DdsLoader.cpp  DdsLoader.h  MaterialFactory.h  MeshData.h  MeshFactory.cpp  MeshFactory.h  ObjLoader.cpp  ObjLoader.h  TextureLoader.cpp  TextureLoader.h
src/GVis/Primitives/: BoxMeshFactory.cpp  BoxMeshFactory.h  RectangleMeshFactory.cpp  RectangleMeshFactory.h
src/TestFluid2d/: CMakeLists.txt  Main.cpp
src/TestFluid3d/: CMakeLists.txt  Main.cpp
src/TestGeometryShader/: CMakeLists.txt  Main.cpp
src/TestTessellationShader/: CMakeLists.txt  Main.cpp
src/TestVolumeShader/: CMakeLists.txt  Main.cpp
src/VdbViewerApp/: CMakeLists.txt  Main.cpp
